# TabPFN_internal

./: .gitignore  coconut_ouro_paper.md  paper_table_pfn_v2.5.md  paper_table_pfn_v2.md  paper_table_pfn_v3.md  pyproject.toml
.github/workflows/: check-changelog.yml  ci.yml  claude-code-review.yml  claude.yml  nightly-notebook-check.yml  release-create-pr.yml  release-publish.yml  release-tag-on-merge.yml
exp/: HCA_FALLBACK_ANALYSIS.md  LOOPED_PRETRAIN_BENCHMARK.html  LOOPED_PRETRAIN_STEP2.md  SPARSE_ROWS_ADAPTIVE_DEPTH.md  SPARSE_ROWS_CALIB_HEAD.md  SPARSE_ROWS_GLOBAL_1B.md  SPARSE_ROWS_INDEXER_1A.md  SPARSE_ROWS_LOO_CEILING.md  SPARSE_ROWS_PLAN.md  TABARENA_EVAL.html  THINKING_MODE_COCONUT_REPORT.md  THINKING_MODE_OURO_REPORT.md  THINKING_MODE_PHASE0_REPORT.md  THINKING_MODE_SUMMARY.md
reproduce/: 01_basic_classification.py  04_kv_cache_speedup.py  ADAPTIVE_LOOP_REPORT.md  CLUSTER_MIGRATION.md  EXPERIMENT_GUIDE.md  README.md  adaptive_ceiling_run.out  adaptive_k_results.json  benchmark_eval_expanded.out  benchmark_eval_fixed.out  calib_head_run.out  coconut_v2_run.out  curric_k1to6_12L_80000.out  env_pip_freeze.txt  env_wcb_rl_training.yml  experiment_07_high_dimensional.py  fetch_tabarena.out  fev_bench_tasks.yaml  final_eval.out  final_eval_results.json  h1h2_eval.out  h1h2_results.json  h3_eval.out  h3_eval_results.json  h3_halt_mlp_10k.out  h5_act_l001_12L_80000.out  h5_act_l005_12L_80000.out  h5_act_l01_12L_80000.out  h5_act_l02_12L_80000.out  h5_final_results.html  h5_l001_eval_with_ref_fixed.json  h5_l005_eval_with_ref_fixed.json  indexer_fulltrain_run.out  indexer_gate_run.out  indexer_gate_run2.out  indexer_global_run.out  indexer_honest_run.json  indexer_honest_run.out  indexer_scaleup_run.out  loo_ceiling_run.out  (+54 more)
reproduce/ckpt/loopk4_12L_80000/: config.json
reproduce/ckpt/loopk6_12L_80000/: config.json
reproduce/eval_bank/: eval_000.csv  eval_001.csv  eval_002.csv  eval_003.csv  eval_004.csv  eval_005.csv  eval_006.csv  eval_007.csv  eval_008.csv  eval_009.csv  eval_010.csv  eval_011.csv  eval_012.csv  eval_013.csv  eval_014.csv  eval_015.csv  eval_016.csv  eval_017.csv  eval_018.csv  eval_019.csv
reproduce/exp/looped_pretrain/: fetch_tabarena.py  looped_step2.py  looped_train.py  maxconf_results.json  run_adaptive_k.py  run_benchmark_eval.py  run_curriculum.sh  run_final_eval.py  run_fixed_large_k.sh  run_h1_h2_eval.py  run_h3_eval.py  run_h5_eval.py  run_h6_eval.py  run_halting_all.sh  run_k_oracle_methods.py  run_looped_smoke.py  run_maxconf.py  run_ouro_diag.py  run_tabarena_eval.py  run_trend_eval.py  slurm_h5_l001.sh  slurm_h5_l005.sh  slurm_h6.sh  submit_all.sh  tabarena_tasks.json  train_curriculum.py  train_h3_halt_mlp.py  train_h5_act.py  train_h6_budget_cond.py
reproduce/reports/: HIGH_PRIORITY_EXPERIMENTS_REPORT.md  HIGH_VALUE_EXPERIMENTS_REPORT.md  PAPER_VS_VERIFICATION_ANALYSIS.md  REMAINING_VERIFICATION_PLAN.md  TOP3_HIGH_VALUE_REPORT.md  UPDATED_FINAL_SUMMARY.txt
reproduce/reports/archive/: ALL_FILES_INDEX.md  COMPLETE_SUMMARY.md  DETAILED_UNVERIFIED.md  EXPERIMENT_INDEX.md  FINAL_COMPLETE_REPORT.md  FINAL_REPORT.md  FINAL_SUMMARY_TABLE.txt  QUICK_SUMMARY.md  README_original.md  RESULTS_SUMMARY.md  UNVERIFIED_EXPERIMENTS.md  UNVERIFIED_SUMMARY.txt  VERIFICATION_SUMMARY.txt
src/tabpfn/architectures/: tabpfn_v2_5.py
